--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					    <li><a href="Index.html">Home</a></li>
 						<li><a href="Servicos.html">Serviços</a></li>
 						<li><a href="Sobre.html">Sobre</a></li>
-						<li><a href="#">Orçamentos</a></li>
-						<li><a href="#">Endereço</a></li>
+						<li><a href="Orcamento.html">Orçamentos</a></li>
+						<li><a href="Endereco.html">Endereço</a></li>
 					</ul>
 	
 				</nav>
@@ -130,27 +130,19 @@
 						<li><a href="#">Tintas</a></li>
 						<li><a href="#">Equipamentos</a></li>
 						<li><a href="#">Trocas</a></li>
-						<li><a href="#">...</a></li>
+						
 					</ul>
 				</li>
 
-				<li class="links">
-					<ul>
-						<li><a href="#">Sousa</a></li>
-						<li><a href="#">Uirauna</a></li>
-						<li><a href="#">Cajazeiras</a></li>
-						<li><a href="#">Patos</a></li>
-						<li><a href="#">...</a></li>
-					</ul>
-				</li>
+		
 
 				<li class="about">
 					<p>Oficina que prima por manter a originalidade em primeiro lugar, trabalhando com os melhores produtos do mercado, para oferecer ao seu veículo um serviço de qualidade.</p>
 					<ul>
-						<li><a href="http://facebook.com/pixelhint" class="facebook" target="_blank"></a></li>
-						<li><a href="http://twitter.com/pixelhint" class="twitter" target="_blank"></a></li>
-						<li><a href="http://plus.google.com/+Pixelhint" class="google" target="_blank"></a></li>
-						<li><a href="#" class="skype"></a></li>
+							<li><a href="http://facebook.com/oficinabigboy" class="facebook" target="_blank"></a></li>
+						<li><a href="#" class="twitter" target="_blank"></a></li>
+						<li><a href="#" class="google" target="_blank"></a></li>
+						<li><a href="#" class="skype"></a></li>			
 					</ul>
 				</li>
 			</ul>
