--- a/Sobre.html
+++ b/Sobre.html
@@ -38,33 +38,18 @@
 
 	<section class="listings">
 		<div class="wrapper">
-			<ul class="properties_list">
-		<li>
-					<a href="#">
-						<img src="img/ferramentas/ferramentas5images.jpg" alt="" title="" class="property_img"/>
-					</a>
-				
-					<div class="property_details">
-						<h1>
-							<a href="#">Pintura</a>
-						</h1>
-						<h2>Todos os tipos de pintura  metalica, perolizada, pu ...</h2>
-					</div>
-				</li>
-					<li>
-					<a href="#">
-						<img src="img/ferramentas/ferramentas9images.jpg" alt="" title="" class="property_img"/>
-					</a>
-					
-					<div class="property_details">
-						<h1>
-							<a href="#">Lanternagem</a>
-						</h1>
-						<h2>Fazemos a recuperação completa quando realmente necessário...</h2>
-					</div>
-				</li>
-			</ul>
-		</div>
+		
+		  <h3>A Oficina Big Boy é uma empresa que teve sua fundação em Setembro de 1994, com mais de 21 anos de mercado, possui  sua unidade na cidade de Uiraúna e atende os veículos nos serviços de  lanternagem e pintura.</h3>
+          <h3>Atende a todos os tipos de reparos em veículos nacionais e importados. Está instalada proxima a saida para
+		  Souza, e conta com os serviços de  polimento geral, retoques, soldas ...</h3>
+          <h3>O setor de lanternagem é o 1º da cidade. Qualificação creditada por nossos clientes , fomos os primeiros a usar o equipamento de repuxamento que devolve as medidas originais do seu carro.
+<h3>
+Nosso pessoal  é periodicamente qualificado em treinamentos específicos, objetivando a atualização e acompanhamento da inovação tecnológica e as exigências do mercado.
+</h3>
+<h2>Essa é a história da Oficina Big Boy, venha fazer parte dela!
+	</h2>	
+	    </div>
+		
 	</section>	<!--  end listing section  -->
 
 	<footer>
