--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		
 
 				<li class="about">
-					<p>Oficina que prima por manter a originalidade em primeiro lugar, trabalhando com os melhores produtos do mercado, para oferecer ao seu veículo um serviço de qualidade.</p>
+					<p>>A Oficina Big Boy prima por manter a originalidade em primeiro lugar, trabalhando com os melhores produtos do mercado, para oferecer ao seu veículo um serviço de qualidade.</p>
 					<ul>
 							<li><a href="http://facebook.com/oficinabigboy" class="facebook" target="_blank"></a></li>
 						<li><a href="#" class="twitter" target="_blank"></a></li>
