--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<a href="#" class="hamburger"></a>
 				<nav>
 					<ul>
-					    <li><a href="Index.html">Home</a></li>
+					    <li><a href="index.html">Início</a></li>
 						<li><a href="Servicos.html">Serviços</a></li>
 						<li><a href="Sobre.html">Sobre</a></li>
 						<li><a href="Orcamento.html">Orçamentos</a></li>
@@ -137,7 +137,7 @@
 		
 
 				<li class="about">
-					<p>>A Oficina Big Boy prima por manter a originalidade em primeiro lugar, trabalhando com os melhores produtos do mercado, para oferecer ao seu veículo um serviço de qualidade.</p>
+					<p>A Oficina Big Boy prima por manter a originalidade em primeiro lugar, trabalhando com os melhores produtos do mercado, para oferecer ao seu veículo um serviço de qualidade.</p>
 					<ul>
 							<li><a href="http://facebook.com/oficinabigboy" class="facebook" target="_blank"></a></li>
 						<li><a href="#" class="twitter" target="_blank"></a></li>
