--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/super logo/ferramentas32.jpg" alt="" title="" class="property_img"/>
+						<img src="img/super logo/batido3.jpg" alt="" title="" class="property_img"/>
 					</a>
 				
 					<div class="property_details">
 						<h1>
-							<a href="#">Chave de fenda pequena</a>
+							<a href="#">Batida frontal e para-brisa quebrado</a>
 						</h1>
 
 					</div>
