--- a/Sobre.html
+++ b/Sobre.html
@@ -39,15 +39,15 @@
 	<section class="listings">
 		<div class="wrapper">
 		
-		  <h2>A Oficina Big Boy é uma empresa que teve sua fundação em Setembro de 1994, com mais de 21 anos de mercado, possui  sua unidade na cidade de Uiraúna e atende os veículos nos serviços de  lanternagem e pintura.</h2>
-          <h2>Atende a todos os tipos de reparos em veículos nacionais e importados. Está instalada proxima a saida para
-		  Souza, e conta com os serviços de  polimento geral, retoques, soldas ...</h2>
-          <h2>O setor de lanternagem é o 1º da cidade. Qualificação creditada por nossos clientes , fomos os primeiros a usar o equipamento de repuxamento que devolve as medidas originais do seu carro.
-<h2>
-Nosso pessoal  é periodicamente qualificado em treinamentos específicos, objetivando a atualização e acompanhamento da inovação tecnológica e as exigências do mercado.
-</h2>
-<h2>Essa é a história da Oficina Big Boy, venha fazer parte dela!
-	</h2>	
+		  <h4>A Oficina Big Boy é uma empresa que teve sua fundação em Setembro de 1994, com mais de 21 anos de mercado, possui  sua unidade na cidade de Uiraúna e atende os veículos nos serviços de  lanternagem e pintura.</h4>
+          <h4>Atende a todos os tipos de reparos em veículos nacionais e importados. Está instalada proxima a saida para
+		  Souza, e conta com os serviços de  polimento geral, retoques, soldas ...</h4>
+          <h4>O setor de lanternagem é o 1º da cidade. Qualificação creditada por nossos clientes , fomos os primeiros a usar o equipamento de repuxamento que devolve as medidas originais do seu carro.
+<h4>
+Nosso pessoal tem experiencia e possui trabalho qualificado, objetivando atender cada vez melhor nossos clientes.
+</h4>
+<h4>Essa é a história da Oficina Big Boy, venha fazer parte dela!
+	</h4>	
 	    </div>
 		
 	</section>	<!--  end listing section  -->
