--- a/Sobre.html
+++ b/Sobre.html
@@ -39,7 +39,7 @@
 	<section class="listings">
 		<div class="wrapper">
 		
-		  <h4>A Oficina Big Boy é uma empresa que teve sua fundação em Setembro de 1994, com mais de 21 anos de mercado, possui  sua unidade na cidade de Uiraúna e atende os veículos nos serviços de  lanternagem e pintura.</h4>
+		  <h4>A Oficina Big Boy é uma empresa que teve sua fundação no ano de 1994, com mais de 21 anos de mercado, possui  sua unidade na cidade de Uiraúna e atende os veículos nos serviços de  lanternagem e pintura.</h4>
           <h4>Atende a todos os tipos de reparos em veículos nacionais e importados. Está instalada proxima a saida para
 		  Souza, e conta com os serviços de  polimento geral, retoques, soldas ...</h4>
           <h4>O setor de lanternagem é o 1º da cidade. Qualificação creditada por nossos clientes , fomos os primeiros a usar o equipamento de repuxamento que devolve as medidas originais do seu carro.
