--- a/Orcamento.html
+++ b/Orcamento.html
@@ -22,7 +22,7 @@
 				<a href="#" class="hamburger"></a>
 				<nav>
 					<ul>
-					     <li><a href="Index.html">Início</a></li>
+					     <li><a href="index.html">Início</a></li>
 						<li><a href="Servicos.html">Serviços</a></li>
 						<li><a href="Sobre.html">Sobre</a></li>
 						<li><a href="Orcamento.html">Orçamentos</a></li>
