--- a/Servicos.html
+++ b/Servicos.html
@@ -3,8 +3,8 @@
 <head>
 	<title>BIG BOY</title>
 	<meta charset="utf-8">
-	<meta name="author" content="pixelhint.com">
-	<meta name="description" content="Oficina free real state fully responsive html5/css3 home page website template"/>
+	<meta name="author" content="OficinaBigboy">
+	<meta name="description" content="Oficina completamente responsivo html5/css3 home page website"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
