Teste com o facebook

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>BIG BOY</title>
 	<meta charset="utf-8">
 		<meta name="author" content="OficinaBigboy">
-	<meta name="description" content="Oficina completamente responsivo html5/css3 home page website"/>
+	<meta name="description" content="Oficina Big Boy lanternagem e pintura"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -14,7 +14,23 @@
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+        <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '846406215459369',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
 
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 	<section class="hero">
 		<header>
 			<div class="wrapper">
