--- a/index.html
+++ b/index.html
@@ -163,7 +163,12 @@
 				</li>
 			</ul>
 		</div>
-
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 		<div class="copyrights wrapper">
 			Copyright © 2015 <a href="index.html" target="_blank" class="ph_link" title="Download more free Templates">OficinaBigBoy.com</a>. All Rights Reserved.
 		</div>
