--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
 							<li><a href="http://facebook.com/oficinabigboy" class="facebook" target="_blank"></a></li>
 						<li><a href="#" class="twitter" target="_blank"></a></li>
 						<li><a href="#" class="google" target="_blank"></a></li>
-						<li><a href="#" class="skype"></a></li>			
-					</ul>
-				</li>
-			</ul>
-		</div>
-<div
+						<li><a href="#" class="skype"></a></li>	
+						<li><div
   class="fb-like"
   data-share="true"
   data-width="450"
   data-show-faces="true">
-</div>
+</div></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 		<div class="copyrights wrapper">
 			Copyright © 2015 <a href="index.html" target="_blank" class="ph_link" title="Download more free Templates">OficinaBigBoy.com</a>. All Rights Reserved.
 		</div>
